--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,11 @@ label {
 }
 
 textarea {
-  width: 50%;
-  height: fit-content;
+  width: 100%;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  height: 300px;
+  white-space: pre-line;
 }
 
 button[type="submit"] {
@@ -52,10 +55,13 @@ button[type="submit"] {
 }
 
 #alert {
-  margin-left: 10%;
   color: lawngreen;
 }
 
 .hidden {
   visibility: hidden;
+}
+
+.cmd-display {
+  margin-bottom: 3rem;
 }
