--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: rgb(2, 2, 36);
+  background: rgb(0, 0, 5);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 5, 1) 0%,
+    rgba(21, 21, 115, 1) 50%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
 
 h1 {
@@ -31,15 +37,16 @@ label {
   margin: 1rem;
   padding: 1rem;
   border: 2px black solid;
+  border-radius: 10px;
   background-color: rgb(220, 221, 228);
 }
 
 textarea {
-  width: 100%;
+  width: 80%;
   margin-left: 2rem;
   margin-right: 2rem;
   height: 300px;
-  white-space: pre-line;
+  background-color: rgb(220, 221, 228);
 }
 
 button {
@@ -66,9 +73,15 @@ button[type="submit"] {
 }
 
 .cmd-display {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 3rem;
 }
 
 .example {
   font-size: smaller;
+}
+
+.light-txt {
+  color: white;
 }
