--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -5,13 +10,27 @@ body {
   background: linear-gradient(
     90deg,
     rgba(0, 0, 5, 1) 0%,
-    rgba(21, 21, 115, 1) 50%,
+    rgb(17, 17, 94) 50%,
     rgba(0, 0, 0, 1) 100%
   );
+  overflow: auto;
+  height: 100%;
 }
 
 h1 {
   color: white;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+img {
+  max-height: 120px;
+  margin-left: 2rem;
 }
 
 form {
@@ -36,7 +55,7 @@ label {
   width: 80%;
   margin: 1rem;
   padding: 1rem;
-  border: 2px black solid;
+  border: 2px rgb(100, 100, 100) solid;
   border-radius: 10px;
   background-color: rgb(220, 221, 228);
 }
@@ -47,6 +66,7 @@ textarea {
   margin-right: 2rem;
   height: 300px;
   background-color: rgb(220, 221, 228);
+  border: 4px rgb(31, 31, 167) solid;
 }
 
 button {
@@ -55,6 +75,10 @@ button {
 
 button[type="submit"] {
   font-size: x-large;
+}
+
+button:hover {
+  background-color: paleturquoise;
 }
 
 .container {
@@ -84,4 +108,23 @@ button[type="submit"] {
 
 .light-txt {
   color: white;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer > p {
+  font-size: x-large;
+  color: white;
+}
+
+span i {
+  margin: 5px;
+}
+
+span a:visited {
+  color: aqua;
 }
