--- a/styles.css
+++ b/styles.css
@@ -96,9 +96,14 @@ button:hover {
   visibility: hidden;
 }
 
-.disclaimer {
+.disclaimer,
+.guide {
   color: white;
-  font-size: large;
+  font-size: medium;
+}
+
+.guide {
+  margin: 1rem;
 }
 
 .cmd-display {
@@ -119,9 +124,11 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 1rem;
 }
 
 footer > p {
+  margin: 0;
   font-size: x-large;
   color: white;
 }
