--- a/info.css
+++ b/info.css
@@ -7,6 +7,22 @@ body {
   color: black;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: rgb(238, 238, 238);
   overflow: auto;
   height: 100%;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+main {
+  margin: 3rem;
+}
+
+img {
+  max-width: 200px;
 }
